<resources>
    <string name="app_name">GuitarApp</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_guitar_app">Welcome to Guitar App</string>
    <string name="metronome">Metronome</string>
    <string name="drum_machine">Drum Machine</string>
    <string name="kick">Kick</string>
    <string name="defaultname">defaultName</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
</resources>
